# evoverse

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  docker-compose.yml  package.json
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  worker.py
backend/app/api/: __init__.py  errors.py
backend/app/domain/: __init__.py  event_payloads.py  models.py
backend/app/persistence/: __init__.py  migrations.py  repository.py  schema.py
backend/app/services/: __init__.py  alpha_store.py  serializers.py
backend/app/simulation/: __init__.py  benchmark.py  diagnostics.py  engine.py  event_templates.py  randomness.py  rule_config.py  rules.py  seeder.py  smoke.py  sweep.py
backend/migrations/: 001_initial_schema.sql  002_simulation_rule_governance.sql  003_entity_snapshot_details.sql  004_observer_notifications.sql  005_catalyst_roles_results.sql  006_admin_simulation_controls.sql  007_observability_analytics.sql  008_chirality_field.sql  009_loop_hotpath_indexes.sql  010_species_chirality.sql  011_event_feed_keyset_indexes.sql  012_snapshot_frame_budget.sql  013_diagnostics_runs.sql  014_local_order_and_domain_count.sql  015_resource_report_and_decline_reference.sql
backend/tests/: test_api.py  test_chirality.py  test_diagnostics.py  test_migrations.py  test_persistence.py  test_rule_config.py  test_simulation.py
docs/: ADMIN_SIMULATION_CONTROLS.md  AUTH_ROLE_GATE_DECISION.md  CATALYST_API.md  CHIRALITY_AND_MIND.md  DEVELOPMENT.md  (+12 more)
(+111 files in other folders)
